[gd_scene load_steps=22 format=2]

[ext_resource path="res://stages/menus/MenuOpt.tscn" type="PackedScene" id=1]
[ext_resource path="res://stages/Fade.tscn" type="PackedScene" id=2]
[ext_resource path="res://stages/hud/KillCount.tscn" type="PackedScene" id=3]
[ext_resource path="res://stages/menus/pause_menu.gd" type="Script" id=4]
[ext_resource path="res://base/input_texture.gd" type="Script" id=5]
[ext_resource path="res://stages/hud.gd" type="Script" id=6]
[ext_resource path="res://stages/hud/BarBG.png" type="Texture" id=7]
[ext_resource path="res://stages/hud/BarHealth.png" type="Texture" id=8]
[ext_resource path="res://stages/hud/BarMeter.png" type="Texture" id=9]
[ext_resource path="res://stages/hud/BarHealthFlash.png" type="Texture" id=10]
[ext_resource path="res://stages/main/Confirm.png" type="Texture" id=11]
[ext_resource path="res://stages/menus/Guide.png" type="Texture" id=12]
[ext_resource path="res://stages/hud/BarMeterFull.png" type="Texture" id=13]
[ext_resource path="res://stages/main/Cancel.png" type="Texture" id=14]
[ext_resource path="res://stages/hud/BarMeterFlash.png" type="Texture" id=15]
[ext_resource path="res://player/RM001/RM001-IconHUD.png" type="Texture" id=16]

[sub_resource type="Animation" id=5]
resource_name = "Flash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.513726, 0.513726, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Flash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 15 ), ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Full"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.811765, 0.811765, 0.811765, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="PlayerBar" type="Control" parent="."]
anchor_left = 0.003
anchor_right = 0.128
anchor_bottom = 0.089
margin_left = 0.04
margin_right = 0.0399971
margin_bottom = -0.0200005
rect_pivot_offset = Vector2( 20, 8 )

[node name="Icon" type="TextureRect" parent="PlayerBar"]
margin_left = 2.0
margin_top = 2.0
margin_right = 26.0
margin_bottom = 26.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )

[node name="HealthBG" type="TextureRect" parent="PlayerBar"]
margin_left = 15.0
margin_top = 2.0
margin_right = 63.0
margin_bottom = 14.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="HealthFill" type="TextureRect" parent="PlayerBar"]
margin_left = 16.0
margin_top = -1.0
margin_right = 17.0
margin_bottom = 11.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 6 )
texture = ExtResource( 8 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerBar/HealthFill"]
anims/Flash = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="MeterBG" type="TextureRect" parent="PlayerBar"]
margin_left = 15.0
margin_top = 8.0
margin_right = 63.0
margin_bottom = 20.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="MeterFill" type="TextureRect" parent="PlayerBar"]
margin_left = 16.0
margin_top = 5.0
margin_right = 17.0
margin_bottom = 17.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 6 )
texture = ExtResource( 9 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerBar/MeterFill"]
anims/Flash = SubResource( 7 )
anims/Full = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="EnemyBarContainer" type="GridContainer" parent="."]
anchor_left = 0.15
anchor_right = 0.969
anchor_bottom = 0.089
margin_right = 261.92
margin_bottom = 15.98
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 13

[node name="KillCount" parent="." instance=ExtResource( 3 )]

[node name="PauseMenu" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
script = ExtResource( 4 )

[node name="BG" type="ColorRect" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
color = Color( 0, 0, 0, 0.647059 )

[node name="MenuOptions" type="VBoxContainer" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -36.0
margin_right = 32.0
margin_bottom = 36.0

[node name="Resume" parent="PauseMenu/MenuOptions" instance=ExtResource( 1 )]
label_path = "res://stages/menus/MenuOptResume.png"

[node name="Config" parent="PauseMenu/MenuOptions" instance=ExtResource( 1 )]
margin_top = 19.0
margin_bottom = 34.0
label_path = "res://stages/menus/MenuOptConfig.png"

[node name="Guide" parent="PauseMenu/MenuOptions" instance=ExtResource( 1 )]
margin_top = 38.0
margin_bottom = 53.0
label_path = "res://stages/menus/MenuOptGuide.png"

[node name="Quit" parent="PauseMenu/MenuOptions" instance=ExtResource( 1 )]
margin_top = 57.0
margin_bottom = 72.0
label_path = "res://stages/menus/MenuOptQuit.png"

[node name="ConfirmLabel" type="TextureRect" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -60.0
margin_right = 16.0
margin_bottom = -44.0
texture = ExtResource( 11 )
script = ExtResource( 5 )
texture_kb_path = "res://stages/main/Confirm.png"
texture_ctrl_path = "res://stages/main/Controller-Confirm.png"

[node name="GuideScreen" type="Control" parent="PauseMenu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0

[node name="Guide" type="TextureRect" parent="PauseMenu/GuideScreen"]
anchor_left = 0.125
anchor_top = 0.15
anchor_right = 0.875
anchor_bottom = 0.928
margin_right = -3.05176e-05
margin_bottom = -0.0400085
texture = ExtResource( 12 )
script = ExtResource( 5 )
texture_kb_path = "res://stages/menus/Guide.png"
texture_ctrl_path = "res://stages/menus/Controller-Guide.png"

[node name="BackLabel" type="TextureRect" parent="PauseMenu/GuideScreen"]
anchor_left = 0.45
anchor_top = 0.039
anchor_right = 0.55
anchor_bottom = 0.128
margin_top = -0.02
margin_bottom = -0.0400009
texture = ExtResource( 14 )
script = ExtResource( 5 )
texture_kb_path = "res://stages/main/Cancel.png"
texture_ctrl_path = "res://stages/main/Controller-Cancel.png"

[node name="Fade" parent="." instance=ExtResource( 2 )]
